# ghc-hasfield-plugin

./: .gitignore  README.md  ghc-hasfield-plugin.cabal  nau-plugins.cabal
src/Data/Record/Plugin/: HasFieldPattern.hs  Shim.hs
src/Nau/Plugin/: GhcShim.hs  NamingT.hs  Shim.hs  TemplateHaskellStyle.hs  ViewPattern.hs
test/: PluginTest.hs  TestTypes.hs  Unused.hs
