cabal-version:      2.4
name:               nau-plugins 
version:            0.2.1.0

library
  default-language: Haskell2010
  hs-source-dirs:
      src
  exposed-modules:
      Nau.Plugin.ViewPattern
      Nau.Plugin.NamingT
      Nau.Plugin.Shim
  build-depends:
      base             >= 4.13   && < 4.17
    , containers       >= 0.6.2  && < 0.7
    , mtl              >= 2.2.1  && < 2.3
    , primitive        >= 0.7    && < 0.8
    , record-hasfield  >= 1.0    && < 1.1
    , syb              >= 0.7    && < 0.8
    , ghc 
    , template-haskell

test-suite test
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      PluginTest.hs    
  build-depends:
      base             >= 4.13   && < 4.17
    , record-hasfield  
    , nau-plugins
